--- a/style.css
+++ b/style.css
@@ -81,11 +81,13 @@ h1, h2, h3, h4,a {
 	text-shadow: 0px 0px 6px rgba(0,0,0,0.2);
 }
 
+/*
 h1 { font-size: 136px; 	}
 h2 { font-size: 76px;	}
 h3 { font-size: 56px;	}
 h4 { font-size: 36px;	}
-p { font-size: 20px; }
+p { font-size: 10px; }
+*/
 
 h1.inverted,
 h2.inverted,
