--- a/style.css
+++ b/style.css
@@ -130,33 +130,41 @@ h1 {
 .fmButtonHolder {
     width:100%;
     position:absolute;
-    bottom:30px;
+    bottom:10px;
     height:60px;
     text-align:center;
     padding:0px;
+    color:#111;
 }
 
 .fmButton {
     position:relative;
     display:inline-block;
-    width:30px;
+    width:130px;
     border: 1px solid white;
-    padding:10px;
+    padding:5px;
     text-align:center;
     vertical-align:center;
     cursor:pointer;
+    font-size:24px;
 
     -moz-border-radius: 7px;
     -webkit-border-radius: 7px;
     border-radius: 7px;
 
+  -webkit-transition: all 300ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  -moz-transition: all 300ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+  -ms-transition: all 300ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+   -o-transition: all 300ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
+   transition: all 300ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 }
 
 .depressed {
     /*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
     -moz-box-shadow: inset 0px 0px 10px #000000;
     -webkit-box-shadow: inset 0px 0px 10px #000000;
-    box-shadow: inset 0px 0px 10px #000000;
+    -webkit-box-shadow: 0px 0px 10px #FFFFFF;
+    box-shadow: 0px 0px 10px #FFFFFF;
     /*Inner elements should not cover inner shadows*/
     /*Chrome renders inset shadows incorrectly with border-radius*/
     /*IE 7 AND 8 DO NOT SUPPORT INSET SHADOWS*/
@@ -167,34 +175,43 @@ h1 {
     -ms-filter: "progid: DXImageTransform.Microsoft.gradient(startColorstr = '#262525', endColorstr = '#e6e1e2')";
     /*Element must have a height (not auto)*/
     /*All filters must be placed together*/
-}
-
-.popped {
-    /*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
-    -moz-box-shadow: 0px 0px 10px #000000;
-    -webkit-box-shadow: 0px 0px 10px #000000;
-    box-shadow: 0px 0px 10px #000000;
-    /*Inner elements should not cover inner shadows*/
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr = '#262525', endColorstr = '#e6e1e2');
-    /*INNER ELEMENTS MUST NOT BREAK THIS ELEMENTS BOUNDARIES*/
-    /*Element must have a height (not auto)*/
-    /*All filters must be placed together*/
-    -ms-filter: "progid: DXImageTransform.Microsoft.gradient(startColorstr = '#262525', endColorstr = '#e6e1e2')";
-    /*Element must have a height (not auto)*/
-    /*All filters must be placed together*/
+    position:relative;
+    bottom:20px;
+    color:#EEE;
 }
 
 .buttonGradient {
-    background-image: -moz-linear-gradient(top, #262525, #e6e1e2);
-    background-image: -ms-linear-gradient(top, #262525, #e6e1e2);
-    background-image: -o-linear-gradient(top, #262525, #e6e1e2);
-    background-image: -webkit-gradient(linear, center top, center bottom, from(#262525), to(#e6e1e2));
-    background-image: -webkit-linear-gradient(top, #262525, #e6e1e2);
-    background-image: linear-gradient(top, #262525, #e6e1e2);
+  background: #1e5799;
+  background: -moz-linear-gradient(top, #1e5799 0%, #7db9e8 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e5799), color-stop(100%,#7db9e8));
+  background: -webkit-linear-gradient(top, #1e5799 0%,#7db9e8 100%);
+  background: -o-linear-gradient(top, #1e5799 0%,#7db9e8 100%);
+  background: -ms-linear-gradient(top, #1e5799 0%,#7db9e8 100%);
+  background: linear-gradient(top, #1e5799 0%,#7db9e8 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 );
     -moz-background-clip: padding;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
 }
+
+
+.popped {
+    /*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
+    -moz-box-shadow: inset 0px 0px 10px #000000;
+    -webkit-box-shadow: 0px 0px 10px #000000;
+    box-shadow: inset 0px 0px 10px #000000;
+
+    background: #7db9e8;
+    background: -moz-linear-gradient(top, #7db9e8 0%, #1e5799 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7db9e8), color-stop(100%,#1e5799));
+    background: -webkit-linear-gradient(top, #7db9e8 0%,#1e5799 100%);
+    background: -o-linear-gradient(top, #7db9e8 0%,#1e5799 100%);
+    background: -ms-linear-gradient(top, #7db9e8 0%,#1e5799 100%);
+    background: linear-gradient(top, #7db9e8 0%,#1e5799 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#1e5799',GradientType=0 );
+
+}
+
 
 .profileImage {
   -webkit-box-reflect: below -5px -webkit-gradient(linear,left top, left bottom, from(transparent), to(rgba(255,255,255,0.1))); 
@@ -242,13 +259,13 @@ h1 {
 }
 
 .friendQueryCounter {
-    display:inline-block;
     border: 2px solid white;
     width:160px;
     border-radius:5px;
     background:#222;
     padding:10px;
     margin-left:10px;
+    display:none;
 }
 
 #friendQueryCounterPics {
@@ -257,4 +274,23 @@ h1 {
     overflow:auto;
     padding:5px;
     -webkit-box-shadow: inset 0px 0px 10px #000000;
+}
+
+.fbLoginButton {
+    background-image:url('fblogin.png');
+    background-repeat:no-repeat;
+    width:390px;
+    height:66px;
+}
+
+.fbLoginButton:hover {
+    background-position:0px -66px;
+}
+
+.fbLoginButton:active {
+    background-position:0px -132px;
+}
+
+#closeButton {
+    text-shadow:0 1px 0 #CCC, 0 2px 0 #C9C9C9, 0 3px 0 #BBB, 0 4px 0 #B9B9B9, 0 5px 0 #AAA, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 20px 20px rgba(0, 0, 0, .15);
 }
