--- a/style.css
+++ b/style.css
@@ -294,3 +294,16 @@ h1 {
 #closeButton {
     text-shadow:0 1px 0 #CCC, 0 2px 0 #C9C9C9, 0 3px 0 #BBB, 0 4px 0 #B9B9B9, 0 5px 0 #AAA, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 20px 20px rgba(0, 0, 0, .15);
 }
+
+.loadingGif {
+    width:220px;
+    height:19px;
+    position:absolute;
+    left:-300px;
+    top:-300px;
+    z-index:1000;
+    display:none;
+}
+
+
+
