--- a/style.css
+++ b/style.css
@@ -245,6 +245,17 @@ h1 {
     opacity:0;
 }
 
+
+.askAnchor {
+    width:1px;
+    height:1px;
+    position:absolute;
+    top:0%;
+    left:50%;
+    opacity:0;
+}
+
+
 .bubbleDiv {
     font-size:14px;
 }
