--- a/style.css
+++ b/style.css
@@ -158,7 +158,6 @@ h1 {
    -o-transition: all 300ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
    transition: all 300ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 }
-
 .depressed {
     /*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
     -moz-box-shadow: inset 0px 0px 10px #000000;
@@ -302,8 +301,17 @@ h1 {
     background-position:0px -132px;
 }
 
-#closeButton {
+#closeButton, .closeButton {
     text-shadow:0 1px 0 #CCC, 0 2px 0 #C9C9C9, 0 3px 0 #BBB, 0 4px 0 #B9B9B9, 0 5px 0 #AAA, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 20px 20px rgba(0, 0, 0, .15);
+}
+
+.closeButton {
+    display:inline-block;
+    float:right;
+    position:relative;
+    top:-15px;
+    font-size:20px;
+    cursor:pointer;
 }
 
 .loadingGif {
@@ -314,6 +322,47 @@ h1 {
     top:-300px;
     z-index:1000;
     display:none;
+}
+
+
+.topNotifyBar {
+    position:relative;
+    top:-10px;
+    min-width:200px;
+    max-width:600px;
+    padding:20px;
+
+   /*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
+    -moz-box-shadow: inset 0px 0px 10px #000000;
+    -webkit-box-shadow: inset 0px 0px 10px #000000;
+    -webkit-box-shadow: 0px 0px 10px #FFFFFF;
+    box-shadow: 0px 0px 10px #FFFFFF;
+    /*Inner elements should not cover inner shadows*/
+    /*Chrome renders inset shadows incorrectly with border-radius*/
+    /*IE 7 AND 8 DO NOT SUPPORT INSET SHADOWS*/
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr = '#262525', endColorstr = '#e6e1e2');
+    /*INNER ELEMENTS MUST NOT BREAK THIS ELEMENTS BOUNDARIES*/
+    /*Element must have a height (not auto)*/
+    /*All filters must be placed together*/
+    -ms-filter: "progid: DXImageTransform.Microsoft.gradient(startColorstr = '#262525', endColorstr = '#e6e1e2')";
+    /*Element must have a height (not auto)*/
+    /*All filters must be placed together*/
+
+    color:#EEE;
+
+    border: 1px solid white;
+    text-align:center;
+    vertical-align:center;
+    cursor:pointer;
+    font-size:24px;
+
+    -moz-border-radius: 7px;
+    -webkit-border-radius: 7px;
+    border-radius: 7px;
+}
+
+.topNotifyBarHidden {
+    top:-200px;
 }
 
 
